--- a/roles/maria_db/tasks/main.yml
+++ b/roles/maria_db/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: "Create database"
   mysql_db:
-    name: "{{ db_name }}"
+    name: "{{ mysql_db }}"
     config_file: /etc/my.cnf
     login_unix_socket: /var/lib/mysql/mysql.sock
     state: present
@@ -19,7 +19,7 @@
 - name: "Create a user for the database"
   no_log: yes
   mysql_user:
-    name: "{{ db_user }}"
-    password: "{{ db_password }}"
+    name: "{{ mysql_user }}"
+    password: "{{ mysql_password }}"
     priv: "*.*:ALL"
     state: present
