Assigned values to mysql variables

--- a/host_vars/db_web_server.yml
+++ b/host_vars/db_web_server.yml
@@ -1,5 +1,5 @@
 ansible_connection: local
 
-mysql_db:
-mysql_user:
-mysql_password:
+mysql_db: modak_flix
+mysql_user: root
+mysql_password: root_pass
