Escalated privilege to root for installing httpd, php, php-mysql

--- a/roles/httpd_web/tasks/main.yml
+++ b/roles/httpd_web/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: "Install httpd, php and php-mysql daemon"
+  become: yes
+  become_user: root
   package:
     name: ['httpd', 'php', 'php-mysql']
     state: installed
