--- a/host_vars/db_web_server.yml
+++ b/host_vars/db_web_server.yml
@@ -1,5 +1,11 @@
 ansible_connection: local
 
+flix_admin: flix_admin
+flix_admin_group: flix_admin_group
+flix_admin_pass: flix_admin_pass
+
 mysql_db: modak_flix
-mysql_user: root
-mysql_password: root_pass
+mysql_user: flix_admin
+mysql_password: flix_admin_pass
+
+password_salt: $1$TinchOfSalt$
