--- a/roles/maria_db/tasks/main.yml
+++ b/roles/maria_db/tasks/main.yml
@@ -4,9 +4,10 @@
     state: present
 
 - name: "Start MariaDB service"
+  become: yes
+  become_user: "{{ flix_admin }}"
   service:
     name: mariadb
-    enabled: yes
     state: started
 
 - name: "Create database"
