--- a/roles/spin_up_docker/tasks/main.yml
+++ b/roles/spin_up_docker/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: "Execute the docker-compose file"
   docker_compose:
-    project_src: ../../../docker-compose.yml
+    project_src: docker-compose.yml
   register: docker_compose_output
 
 - name: "Print the output of docker-compose up"
