Added task to install python3 to setup docker dependencies

--- a/roles/setup_dependencies/tasks/main.yml
+++ b/roles/setup_dependencies/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: "Download Python 3"
+  package:
+    name: python3
+    state: present
+
 - name: "Download Git repo"
   git:
     repo: https://github.com/official-srv-modak/OTTServer.git
