Modified task to install python dependency libraries

--- a/roles/python_dependency/tasks/main.yml
+++ b/roles/python_dependency/tasks/main.yml
@@ -1,3 +1,5 @@
-- name: "Install PyMySQL"
+- name: "Install Python library dependencies"
   pip:
-    name: PyMySQL
+    name: ["requests", "docker", "docker-compose"]
+  vars:
+    ansible_python_interpreter: /bin/python3
