--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
-            MYSQL_DATABASE: modak_flix
-            MYSQL_USER: MYSQL_USER
-            MYSQL_PASSWORD: MYSQL_PASSWORD
+            MYSQL_DATABASE: "{{ mysql_db }}"
+            MYSQL_USER: "{{ mysql_user }}"
+            MYSQL_PASSWORD: "{{ mysql_password }}"
         ports:
             - "3000-3005:3306"
     ngnix:
