--- a/roles/setup_scripts/tasks/main.yml
+++ b/roles/setup_scripts/tasks/main.yml
@@ -12,8 +12,7 @@
     mode: "0644"
 
 - name: "Copy the path.php script to hosted directory"
-  copy:
-    src: ./roles/setup_scripts/templates/path.php
+  template:
+    src: ./roles/setup_scripts/templates/path.php.j2
     dest: /var/www/html/src/path.php
     mode: "0644"
-    remote_src: yes
