--- a/roles/setup_dependencies/tasks/main.yml
+++ b/roles/setup_dependencies/tasks/main.yml
@@ -10,6 +10,14 @@
     version: main
     force: yes
 
+- name: "Change ownership of hosted directory"
+  file:
+    path: /var/www/html/src/
+    owner: "{{ flix_admin }}"
+    group: "{{ flix_admin_group }}"
+    state: directory
+    recurse: yes
+
 - name: "Install docker-compose"
   get_url:
     url: "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
