Enabled firewall on ports

--- a/deploy_dockerized_ottserver.yml
+++ b/deploy_dockerized_ottserver.yml
@@ -21,6 +21,7 @@
   become: yes
   become_user: root
   roles:
+    - firewall_setup
     - setup_dependencies
     - python_dependency
     - setup_scripts
