--- a/roles/firewall_setup/tasks/main.yml
+++ b/roles/firewall_setup/tasks/main.yml
@@ -12,14 +12,14 @@
 
 - name: "Permit traffic on default port for MariaDB through firewall"
   firewalld:
-    port: 3306/tcp
+    port: ["3000/tcp", "3001/tcp", "3002/tcp", "3003/tcp", "3004/tcp", "3005/tcp"]
     permanent: yes
     state: enabled
     immediate: yes
 
 - name: "Permit traffic on default port for httpd through firewall"
   firewalld:
-    port: 80/tcp
+    port: ["8000/tcp", "8001/tcp", "8002/tcp", "8003/tcp", "8004/tcp", "8005/tcp"]
     permanent: yes
     state: enabled
     immediate: yes
