--- a/roles/spin_up_docker/tasks/main.yml
+++ b/roles/spin_up_docker/tasks/main.yml
@@ -7,6 +7,8 @@
 - name: "Execute the docker-compose file"
   docker_compose:
     project_src: "./"
+    scale:
+      web: 3
   vars:
     ansible_python_interpreter: /bin/python3
   register: docker_compose_output
