Added task to restart docker service

--- a/roles/spin_up_docker/tasks/main.yml
+++ b/roles/spin_up_docker/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: "Restart docker daemon to create firewall rules"
+  service:
+    name: docker
+    state: restarted
+
 - name: "Pull the docker-compose file from templates"
   template:
     src: "./templates/docker-compose.yml.j2"
