--- a/host_vars/db_web_server.yml
+++ b/host_vars/db_web_server.yml
@@ -1,13 +1,18 @@
+# Ansible connection type
 ansible_connection: local
 
+# Dedicated Linux user and group
 flix_admin: flix_admin
 flix_admin_group: flix_admin_group
 flix_admin_pass: flix_admin_pass
 
+# MariaDB database and user configuration
 mysql_db: modak_flix
 mysql_user: flix_admin
 mysql_password: flix_admin_pass
 
+# Web server configuration
 path_server: "./"
 
+# Password vars
 password_salt: $1$TinchOfSalt$
