Added task to wait for 10 secs for DB to initialize

--- a/roles/spin_up_docker/tasks/main.yml
+++ b/roles/spin_up_docker/tasks/main.yml
@@ -21,3 +21,8 @@
 - name: "Print the output of docker-compose up"
   debug:
     msg: "{{  docker_compose_output  }}"
+
+- name: "Wait for 10 seconds for DB to initialize"
+  wait_for:
+    timeout: 10
+  delegate_to: localhost
