--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream loadbalancer {
+upstream web {
     server 127.0.0.1:8000;
     server 127.0.0.1:8001;
     server 127.0.0.1:8002;
@@ -9,6 +9,6 @@ upstream loadbalancer {
 server {
     listen 80;
     location / {
-        proxy_pass http://loadbalancer;
+        proxy_pass http://web;
     }
 }
