--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ server 127.0.0.1:8004;
 server 127.0.0.1:8005;
 }
 server {
+listen 80;
 location / {
-proxy_pass http://web:80/;
+proxy_pass http://web;
 }}
