--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,12 @@
-upstream web {
-server 127.0.0.1:8000;
-server 127.0.0.1:8001;
-server 127.0.0.1:8002;
-server 127.0.0.1:8003;
-server 127.0.0.1:8004;
-server 127.0.0.1:8005;
+upstream loadbalancer {
+server web:8000;
+server web:8001;
+server web:8002;
+server web:8003;
+server web:8004;
+server web:8005;
 }
 server {
-listen 80;
 location / {
-proxy_pass http://web;
+proxy_pass http://loadbalancer;
 }}
