Modified nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 upstream loadbalancer {
-server web:8000;
-server web:8001;
-server web:8002;
-server web:8003;
-server web:8004;
-server web:8005;
+server localhost:8000;
+server localhost:8001;
+server localhost:8002;
+server localhost:8003;
+server localhost:8004;
+server localhost:8005;
 }
 server {
 location / {
