Modified nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,5 @@
 upstream loadbalancer {
-server localhost:8000;
-server localhost:8001;
-server localhost:8002;
-server localhost:8003;
-server localhost:8004;
-server localhost:8005;
+server web:80;
 }
 server {
 location / {
