--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,13 @@
-upstream loadbalancer {
-server web:80;
+events {
+    worker_connections 1000;
 }
-server {
-location / {
-proxy_pass http://loadbalancer;
-}}
+
+http {
+    server {
+        listen 5000;
+
+        location / {
+            proxy_pass http://web:80;
+        }
+    }
+}
