Modified nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,5 @@
-http {
-    server {
-        listen 5000;
-
-        location / {
-            proxy_pass http://web:80;
-        }
+server {
+    location / {
+        proxy_pass http://web:80/;
     }
 }
