--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,9 @@
 server {
+    listen 80;
+
+    resolver 127.0.0.11 valid=5s;
+    set $upstream http://web:80/;
     location / {
-        proxy_pass http://web:80/;
+        proxy_pass $upstream;
     }
 }
